implemented ldap authorizer

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,25 @@
-@()
+@(profiles: List[org.pac4j.core.profile.CommonProfile], csrfToken: String, sessionId: String)
+<h1>index</h1>
+<ul>
+  <li><a href="login/httpform">Protected url by basic auth : login/httpform</a> (use professor@@planetexpress.com = professor).<br />
+    <p>The other accounts are defined <a href="https://github.com/rroemhild/docker-test-openldap#ldap-structure">here</a></p>
+  </li>
+  <li><a href="secured">Protected url: secured</a> (won't start any login process)</li>
+  <li><a href="secured/filters">Protected url: secured/filters</a> (won't start any login process)</li>
+  <li><a href="jwt/generate">Generate a JWT token and start the login process</a></li>
+  <li><a href="/jwt/secured">Protected url by ParameterClient: /jwt/secured?token=</a> (with request parameter: token=<em>jwt_generated_token</em>)</li>
+  <li><a href="/logout?url=/?forcepostlogouturl">local logout</a></li>
+  <li><a href="/centralLogout?url=http://localhost:9000/?forcepostlogouturlafteridp">central logout</a></li>
+</ul>
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
-}
+<br /><br />
+profiles: @profiles<br />
+<br />
+sessionId: @sessionId
+<br />
+csrfToken: @csrfToken
+  <!-- Link to Google CDN's jQuery; fall back to local -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="assets/js/jquery.min.js"><\/script>')</script>
+
+<script src="assets/js/app.js"></script>
